test/integration/bad/array-multi-decl-bad.stan
model {
  real x[5], y;
}
